Fixed some alignment issues especially for mobile view make the chat page responsive and work correct in the mobile.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,22 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#root {
+  height: 100%;
+  overflow: hidden;
+}
+
 .str-chat__channel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: linear-gradient(to bottom, #93af93, #b7e7bb);
   height: 100%;
+  width: 100%;
 }
 
 .str-chat__container {
-  max-width: 1250px;
-  width: 100%;
-  height: 85% !important;
-  margin: 0 auto !important;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  width: 100% !important;
+  height: 100% !important;
   overflow: hidden;
+}
+
+@media (min-width: 768px) {
+  .str-chat__channel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .str-chat__container {
+    max-width: 1250px !important;
+    height: 85% !important;
+    margin: 0 auto !important;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  }
 }
 
 .str-chat__list {
